--- a/.github/workflows/validate-md-files.yml
+++ b/.github/workflows/validate-md-files.yml
@@ -19,4 +19,4 @@ jobs:
         run: npm install -g markdownlint-cli
 
       - name: Validate Markdown files
-        run: markdownlint docs/**/*.md
+        run: markdownlint docs/**/*.md -c .markdownlint.json
